# copper-ai

./: .gitignore  .kicad-dev-script-info  README.md  dev-all.sh  dev-build.ps1  dev-build.sh  install-deps.sh  setup-env.sh
.dev-scripts/: 1-website.sh  2-rag.sh  3-agent.sh  4-router.sh
PRIVATE/: AGENTS.md  KiCadDevelopment.code-workspace
agent/: README.md  TOOLS.md  main.py  pyproject.toml  run.sh  test_connection.py
agent/agent_data/: memory.db
agent/agent_data/chroma_db/: chroma.sqlite3
cmake/: CheckBannedFunctions.cmake
common/: dialog_shim.cpp  local_history.cpp  notifications_manager.cpp  pgm_base.cpp
common/api/: api_enums.cpp
common/gal/: gal_display_options.cpp
common/tool/: action_manager.cpp  action_menu.cpp  tool_dispatcher.cpp
common/widgets/: ui_common.cpp  webview_panel.cpp
eeschema/: CMakeLists.txt  COMMIT_USAGE_GUIDE.md  eeschema_settings.cpp  eeschema_settings.h  files-io.cpp  menubar.cpp  sch_edit_frame.cpp  sch_edit_frame.h  sch_label.cpp  sch_painter.cpp  sch_painter.h  schematic.cpp  toolbars_sch_editor.cpp
eeschema/api/: api_handler_sch.cpp  api_handler_sch.h
eeschema/dialogs/: dialog_symbol_properties.cpp
eeschema/tools/: ollama_client.cpp  ollama_client.h  sch_actions.cpp  sch_actions.h  sch_agent.cpp  sch_agent.h  sch_editor_control.cpp  sch_ollama_agent_dialog.cpp  sch_ollama_agent_dialog.h  sch_ollama_agent_prompt.cpp  sch_ollama_agent_prompt.h  sch_ollama_agent_tool.cpp  sch_ollama_agent_tool.h
eeschema/widgets/: sch_ollama_agent_pane.cpp  (+1 more)
kicad/: kicad.cpp
scripting/: python_scripting.cpp
(+28 files in other folders)
