[project]
name = "agent"
version = "0.2.0"
description = "RAG Agent with vector database for KiCad schematic agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
]
